src/objects/Application_Error_Log__c.object
<CustomObject>
    <description>In case of webservice call, store request and response as attachments</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application Name - Functionality name</description>
        <label>Application</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>In case of webservice callout, update this field with endpoint URL otherwise leave this field blank</description>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Update this field with name of application initiating webservice call. If error is not webservice call, leave this field blank</description>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>In case of webservice callout, update this field with http response status code otherwise leave this field blank</description>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <description>In case of webservice callout, update this field with http response status message otherwise leave this field blank</description>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Origin__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>Endpoint__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000000000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>